--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ main {
 nav {
     background-color: beige;
     padding: 10px;
+    width: 100%;
 }
 
 nav ul {
@@ -53,7 +54,7 @@ nav a:hover {
 }
 
 #banner {
-    width: 100%;
+    width: 60%;
     height: auto;
     background-color: white;
 }
@@ -65,6 +66,7 @@ nav a:hover {
 
 .service {
     display: inline-block;
+    text-align:center;
     background-color: white;
     border: 5px solid green;
     border-radius: 5px;
@@ -77,10 +79,15 @@ nav a:hover {
 table {
     border: 3px solid black;
     width: 100%;
+    
 }
   
 td,
 th {
     border: 1px solid black;
     padding: 5px;
+    width:200px;
+    
+
+    
 }
